Text now changes white with darker backgrounds

--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,8 @@
     <p>Click me to pick a colour</p>
     <input type="color" id="pickedColour" name="pickedColour"
            value="#1DA1F2">
-    <button id="save">Save preference</button>
+    <button class="inline" id="save">Save preference</button>
+    <button class="inline" id="reset">Reset</button>
     <hr id="black">
     <button class="footer" id="coffee">
       <i class="fas fa-coffee fa-2x"></i>
